# momenta

./: .env.example  .gitignore  CLAUDE.md  README.md  USER_MANAGEMENT_SETUP.md  build-deploy-stage.ps1  inspect-both-ssl-zips.ps1  inspect-ssl-zip.ps1  pubspec.yaml
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: __init__.py
backend/app/api/: __init__.py  app_release.py  config.py  points.py  tasks.py  voice.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/ai_debug/: __init__.py  ai_debug.py
backend/app/api/v1/app_configs/: __init__.py  app_configs.py
backend/app/api/v1/app_releases/: __init__.py  app_releases.py
backend/app/api/v1/base/: base.py
backend/app/controllers/: api.py  app_config.py  app_release.py  invite_code.py  points.py  recharge.py  task.py  user.py
backend/app/core/: dependency.py  exceptions.py  init_app.py  middlewares.py  openapi.py
backend/app/models/: __init__.py  admin.py  ai_model.py  app_config.py  app_release.py  enums.py  points.py  video_task.py
backend/app/schemas/: ai_debug.py  app_config.py  app_config_admin.py  app_release.py  base.py  invite_codes.py  login.py  menus.py  model_catalog.py  points.py  recharge.py  users.py  video_task.py
backend/app/services/: __init__.py  ai_template_registry.py  business_gateway.py  config_store.py  legacy_gateway.py  llm_gateway.py  local_media.py  model_catalog.py  object_storage.py  speech.py  video_gateway.py
backend/app/settings/: config.py
backend/app/utils/: password.py
backend/scripts/: backfill_video_urls.py  migrate_sqlite_to_mysql.py
(+228 files in other folders)
